--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/100000000398979/.netbeans/8.2/build.properties
+user.properties.file=/home/getuliovb/.netbeans/8.2/build.properties
